Add AMR project

--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
 	  <div class="col-md-10">
 	    <h1>Xiangyun Meng</h1>
 	    <p>
-	      Paul G. Allen School of Computer Science and Engineering, University of Washington
+	      Applied Research Scientist at Field AI
 	    </p>
 	    <p>
-	      3800 E Stevens Way NE, Seattle WA 98195
-	    </p>
-	    <p>
-	      xiangyun (at) cs (dot) washington (dot) edu
+	      xiangyun (at) fieldai (dot) com
 	    </p>
 	    <a href="resume.pdf">CV</a>
 	  </div>
@@ -48,24 +45,17 @@
 	  <ul class="nav">
 	    <li role="presentation"><a href="#bio">Short Bio</a></li>
 	    <li role="presentation"><a href="#projects">Projects</a></li>
-	    <li role="presentation"><a href="#publications">Publications</a></li>
 	  </ul>
 	</div>
 	<div class="col-lg-10">
 	  <div id="bio">
-	    <h2>Short Bio</h2>
+            <p>
+              I am a Applied Research Scientist at Field AI, developing the next-generation robot autonomy.  I obtained
+              my PhD in Computer Science and Engineering from University of Washington advised by Professor Dieter
+              Fox. I also worked closely with Professor Byron Boots for off-road autonomy.
+            </p>
 	    <p>
-	      I obtained my bachelor degree from National University
-	      of Singapore (NUS). Currently I am a PhD
-	      candidate at University of Washington under Prof. Dieter
-	      Fox.
-	    </p>
-	  </div>
-
-	  <div id="bio">
-	    <h2>Research Interests</h2>
-	    <p>
-	      My research interests are in robot perception, planning and control. I am especially interested in
+	      My research interests span robot perception, planning and control. I am especially interested in
               developing algorithms and representations to seamlessly connect perception, planning and control to
               improve the capability and robustness of robots in the open world.
             </p>
@@ -92,20 +82,22 @@
 	  <div id="projects">
             <h2> Latest Projects </h2>
 
-            <h3 class="text-center">Robotic Autonomy in Complex Environments with Resiliency (RACER)</h3>
+            <h3 class="text-center">Aim My Robot: Precision Local Navigation to Any Object</h3>
+            <h4 class="text-center">Xiangyun Meng, Xuning Yang, Sanghun Jung, Fabio Ramos, Sri Sadhan Jujjavarapu, Sanjoy
+Paul, and Dieter Fox</h4>
+            <h4 class="text-center" style="margin-bottom:40px">RAL 2025</h4>
+
             <div class="row">
               <div class="col-lg-6">
-		<img src="https://www.darpa.mil/DDM_Gallery/dsc-0507-619.jpg" class="img-rounded img-responsive center-block">
+		<img src="amr/intro.png" class="img-rounded img-responsive center-block">
               </div>
               <div class="col-lg-6">
                 <p>
-                  <a href="https://www.darpa.mil/news-events/2022-09-16">[news]</a>
-                  <a href="https://racer.cs.washington.edu">[website]</a>
-                  <a href="https://www.youtube.com/watch?v=AlNOzhza7pg&ab_channel=UniversityofWashingtonRobotLearningLab">[promotional video]</a>
-                  I am one of the perception leads of the UW RACER team. We are developing a self-driving system
-                  that enables a passenger-size vehicle to drive aggressively on complex terrain. We
-                  are conducting cutting-edge research in robotics and computer vision, and developing practical
-                  methods that enable a real vehicle to navigate at high speed in complex environments.
+		  <a href="https://arxiv.org/pdf/2411.14770">[paper]</a>
+                  <a href="https://sites.google.com/view/aimmyrobot">[website]</a> AMR is a system that enables a mobile
+                  robot to navigate to any objects with centimeter-level precision with onboard RGB-D and LiDAR. No
+                  prior map, no object model. It shows that large-scale photorealistic simulation is capable of training
+                  precise policies with strong sim2real generalization.
                 </p>
               </div>
             </div>
@@ -122,10 +114,12 @@
               </div>
               <div class="col-lg-6">
                 <p>
-		  <a href="https://arxiv.org/pdf/2303.15771.pdf">[paper]</a> We show how SAM (Segment Anything Model)
-                  can predict high-fidelity traversability maps from human driving. The key intuition is to leverage the
-                  masks produced by SAM as object priors. This allows us to sample positive and negative regions with
-                  object boundaries in mind, producing crispier traversability maps.
+		  <a href="https://arxiv.org/pdf/2303.15771.pdf">[paper]</a>
+                  <a href="https://yxyang.github.io/cajun/">[website]</a>
+                  We show how SAM (Segment Anything Model) can predict high-fidelity traversability maps from human
+                  driving. The key intuition is to leverage the masks produced by SAM as object priors. This allows us
+                  to sample positive and negative regions with object boundaries in mind, producing crispier
+                  traversability maps.
                 </p>
               </div>
             </div>
