--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ Paul, and Dieter Fox</h4>
               </div>
               <div class="col-lg-6">
                 <p>
-		  <a href="https://arxiv.org/pdf/2303.15771.pdf">[paper]</a>
-                  <a href="https://yxyang.github.io/cajun/">[website]</a>
+		  <a href="https://arxiv.org/pdf/2312.16016">[paper]</a>
+                  <a href="https://sites.google.com/view/visual-traversability-learning">[website]</a>
                   We show how SAM (Segment Anything Model) can predict high-fidelity traversability maps from human
                   driving. The key intuition is to leverage the masks produced by SAM as object priors. This allows us
                   to sample positive and negative regions with object boundaries in mind, producing crispier
